syntax = "proto3";

package com.atlan.montecarlo.grpc;

option java_multiple_files = true;
option java_package = "com.atlan.montecarlo.grpc";
option java_outer_classname = "MonteCarloProto";

import "google/protobuf/timestamp.proto";

// Service definition
service MonteCarloWebhookService {
    rpc ProcessWebhook (WebhookRequest) returns (WebhookResponse) {}
    rpc StreamEvents (stream WebhookRequest) returns (stream WebhookResponse) {}
}

// Webhook request message
message WebhookRequest {
    string event_id = 1;
    string table_id = 2;
    IssueType issue_type = 3;
    Severity severity = 4;
    google.protobuf.Timestamp timestamp = 5;
    map<string, string> metadata = 6;
    string tenant_id = 7;
}

// Webhook response message
message WebhookResponse {
    string event_id = 1;
    Status status = 2;
    string message = 3;
    google.protobuf.Timestamp processed_at = 4;
}

// Issue types
enum IssueType {
    UNKNOWN = 0;
    FRESHNESS = 1;
    VOLUME = 2;
    SCHEMA = 3;
    QUALITY = 4;
    PERFORMANCE = 5;
}

// Severity levels
enum Severity {
    UNDEFINED = 0;
    CRITICAL = 1;
    HIGH = 2;
    MEDIUM = 3;
    LOW = 4;
}

// Processing status
enum Status {
    UNSPECIFIED = 0;
    SUCCESS = 1;
    ERROR = 2;
    VALIDATION_FAILED = 3;
}